first pass, compiles